[gd_scene load_steps=19 format=2]

[ext_resource path="res://Objects/Traps/Shred.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Shred/trap3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Shred/trap5.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Shred/trap6.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Shred/trap7.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Shred/trap8.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Shred/trap9.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Shred/trap10.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/Shred/trap11.png" type="Texture" id=9]
[ext_resource path="res://Assets/Images/Shred/trap12.png" type="Texture" id=10]
[ext_resource path="res://Assets/Images/Shred/trap13.png" type="Texture" id=11]
[ext_resource path="res://Assets/Images/Shred/trap14.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Shred/trap15.png" type="Texture" id=13]
[ext_resource path="res://Assets/Images/Shred/trap16.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/Shred/trap17.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sounds/trap_final.wav" type="AudioStream" id=16]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 12.4972, 18.8712 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "setting_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "turbo_mix",
"speed": 9.0
} ]

[node name="Area2D" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( -4.67188, 3.10783 )
scale = Vector2( 4.06539, 1.3869 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "setting_up"
frame = 2
playing = true

[node name="Sprite" type="Sprite" parent="." index="2"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="finish" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="turn_damage" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.6
one_shot = false
autostart = false

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]

[connection signal="timeout" from="finish" to="." method="_on_finish_timeout"]

[connection signal="timeout" from="turn_damage" to="." method="_on_turn_damage_timeout"]


